--- a/bayesian.qmd
+++ b/bayesian.qmd
@@ -333,7 +333,7 @@ Before we look at some data, we will consider a few possible prior distributions
 - an informative prior based on a clay-court match the two played in the previous year. In that match, Nadal won 46 out of 66 points on his own serve. The standard error of this estimate is 0.05657. 
 - an informative prior based on a sports announcer, who claims that they think Nadal wins about 75% of the points on his serve against Djokovic. They are also "almost sure" that Nadal wins no less than 70% of his points on serve against Djokovic.
 
-Here is some code that we briefly did in class for the Gamma-Poisson hockey scoring example that might help generate one of the priors described here:
+Here is some code that we briefly did in class for the Gamma-Poisson hockey scoring example that might help you write code to generate one of the priors mentioned above.
 
 ```{r}
 ## trying to get a mean of 3 and a probability
